external-crates/move/crates/move-compiler/tests/development/enums/naming/pattern_ellipsis_invalid.exp
error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:16:13
   │
16 │             Y::D(..) => 0,
   │             ^^^^^^^^ Invalid variant pattern. Empty variants are not matched with positional variant syntax
   │
   = Remove '()' after the variant name

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:17:13
   │
17 │             Y::D{..} => 0,
   │             ^^^^^^^^ Invalid variant pattern. Empty variants are not matched with variant field syntax
   │
   = Remove '{ }' after the variant name

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:18:13
   │
18 │             Y::D(x, ..) => 0,
   │             ^^^^^^^^^^^ Invalid variant pattern. Empty variants are not matched with positional variant syntax
   │
   = Remove '()' after the variant name

error[E04015]: invalid use of native item
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:18:13
   │
18 │             Y::D(x, ..) => 0,
   │             ^^^^^^^^^^^ Invalid usage for empty variant '0x42::m::Y::D'. Empty variants do not take any arguments.

warning[W09002]: unused variable
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:18:18
   │
18 │             Y::D(x, ..) => 0,
   │                  ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:19:13
   │
19 │             Y::D{x, ..} => 0,
   │             ^^^^^^^^^^^ Invalid variant pattern. Empty variants are not matched with variant field syntax
   │
   = Remove '{ }' after the variant name

error[E04015]: invalid use of native item
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:19:13
   │
19 │             Y::D{x, ..} => 0,
   │             ^^^^^^^^^^^ Invalid usage for empty variant '0x42::m::Y::D'. Empty variants do not take any arguments.

warning[W09002]: unused variable
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:19:18
   │
19 │             Y::D{x, ..} => 0,
   │                  ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:25:13
   │
25 │             X::D{} => 0,
   │             ^^^^^^ Invalid variant pattern. Positional variant declarations require positional patterns.

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:26:13
   │
26 │             X::D{..} => 0,
   │             ^^^^^^^^ Invalid variant pattern. Positional variant declarations require positional patterns.

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:27:13
   │
27 │             X::D{x, ..} => 0,
   │             ^^^^^^^^^^^ Invalid variant pattern. Positional variant declarations require positional patterns.

error[E03010]: unbound field
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:27:13
   │
27 │             X::D{x, ..} => 0,
   │             ^^^^^^^^^^^ Unbound field 'x' in '0x42::m::X::D'

warning[W09002]: unused variable
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:27:18
   │
27 │             X::D{x, ..} => 0,
   │                  ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:33:13
   │
33 │             Z::D() => 0,
   │             ^^^^^^ Invalid variant pattern. Named variant declarations require named patterns.

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:34:13
   │
34 │             Z::D(..) => 0,
   │             ^^^^^^^^ Invalid variant pattern. Named variant declarations require named patterns.

error[E03013]: positional call mismatch
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:35:13
   │
35 │             Z::D(x, ..) => 0,
   │             ^^^^^^^^^^^ Invalid variant pattern. Named variant declarations require named patterns.

error[E03010]: unbound field
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:35:13
   │
35 │             Z::D(x, ..) => 0,
   │             ^^^^^^^^^^^ Unbound field '0' in '0x42::m::Z::D'

warning[W09002]: unused variable
   ┌─ tests/development/enums/naming/pattern_ellipsis_invalid.move:35:18
   │
35 │             Z::D(x, ..) => 0,
   │                  ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

